Source/WebCore/css/CSSFontFace.h
@@ -28,6 +28,7 @@
 #include "CSSFontFaceRule.h"
 #include "FontFeatureSettings.h"
 #include "TextFlags.h"
+#include "Timer.h"
 #include <memory>
 #include <wtf/Forward.h>
 #include <wtf/HashSet.h>
@@ -135,6 +136,8 @@ public:
     // We don't guarantee that the FontFace wrapper will be the same every time you ask for it.
     Ref<FontFace> wrapper();
 
+    bool webFontsShouldAlwaysFallBack() const;
+
 #if ENABLE(SVG_FONTS)
     bool hasSVGFontFaceSource() const;
 #endif
@@ -146,11 +149,15 @@ private:
     void setStatus(Status);
     void notifyClientsOfFontPropertyChange();
 
+    void fontLoadEventOccurred();
+    void timeoutFired();
+
     RefPtr<CSSValueList> m_families;
     FontTraitsMask m_traitsMask { static_cast<FontTraitsMask>(FontStyleNormalMask | FontWeight400Mask) };
     Vector<UnicodeRange> m_ranges;
     FontFeatureSettings m_featureSettings;
     FontVariantSettings m_variantSettings;
+    Timer m_timeoutTimer;
     Vector<std::unique_ptr<CSSFontFaceSource>> m_sources;
     RefPtr<CSSFontSelector> m_fontSelector;
     RefPtr<StyleRuleFontFace> m_cssConnection;
